[package]
name = "alien-keyboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "processthreadsapi", "sysinfoapi"] }
lazy_static = "1.4.0"
rand = "0.8.5"